deleted one last bogus method.

--- a/ServiceTagPuller/Forms/VersionForm.resx
+++ b/ServiceTagPuller/Forms/VersionForm.resx
@@ -118,10 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="richTextBox1.Text" xml:space="preserve">
-    <value>Rev 2.2 - 6/6/2017
+    <value>Rev 2.2 - 6/7/2017
 -Revised multi PC.
 -Fixed multiple PC list updating from AD.
 -Broke out software options individually. 
+-Revised code structure further. Cleaning up methods.
+-Fixed Broken Icon!
 
 Rev 2 - 5/26/17
 -Added more details to the returned information.
