--- a/ServiceTagPuller/Forms/VersionForm.resx
+++ b/ServiceTagPuller/Forms/VersionForm.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="richTextBox1.Text" xml:space="preserve">
-    <value>Rev 2.3 - 9/8/2017
+    <value>Rev 2.3 - 9/8/17
 -Added User Tab - Get AD Groups from a specific user.
 -Added a copy button for the multi PC section.
 -Further code revision. More is needed.
 
-Rev 2.2 - 6/7/2017
+Rev 2.2 - 6/7/17
 -Revised multi PC.
 -Fixed multiple PC list updating from AD.
 -Broke out software options individually. 
@@ -132,7 +132,7 @@ Rev 2.2 - 6/7/2017
 
 Rev 2 - 5/26/17
 -Added more details to the returned information.
--Added the ability to find computer in AD. Although selecting multiple machines is slow.
+-Added the ability to find computer in AD. 
 -Refactored methods.
 -Restyled form as a whole.</value>
   </data>
