--- a/ServiceTagPuller/Forms/VersionForm.resx
+++ b/ServiceTagPuller/Forms/VersionForm.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="richTextBox1.Text" xml:space="preserve">
-    <value>Rev 2.3 - 9/8/17
+    <value>Rev 2.3.1 - 11/1/17
+-Added OS Build Version to returned results.
+
+Rev 2.3 - 9/8/17
 -Added User Tab - Get AD Groups from a specific user.
 -Added a copy button for the multi PC section.
 -Further code revision. More is needed.
